# x.x.x.x

./: .env.example  .gitignore  .railwayignore  .replit  COMO_PUBLICAR.md  CONFIGURAR_CRON_RAILWAY.md  CONFIGURAR_RAILWAY_VARIABLES.md  DEPLOYMENT.md  DESPUES_DE_RAILWAY.md  GUIA_COMPLETA_DESPLIEGUE.md  GUIA_MAESTRA_ACTIVACION.md  INFORME_FINAL_ERROR_10403.md  INSTRUCCIONES_GITHUB.md  Makefile  OPINION_TRADE_INTEGRATION_STATUS.md  PROBLEMA_OPINION_TRADE_GEO_BLOCK.md  RAILWAY_DEPLOY_SUMMARY.md  RAILWAY_ENV_VARS.md  RAILWAY_MIGRATION_GUIDE.md  api.py  app.py  app_admin.py  autonomous_engine.py  bankroll_manager.py  daily_watchdog.py  data_collectors.py  database.py  health_check_opinion_trade.py  learning_system.py  llm_clients.py  logger.py  main.py  opinion_sdk_patcher.py  opinion_trade_api.py  opinion_trade_interceptor.py  opinion_trade_region_probe.py  prompt_system.py  public_dashboard.py  push-to-github.sh  pyproject.toml  (+20 more)
attached_assets/: Pasted--2025-11-16-18-07-39-INFO-BANKROLL-MODE-TEST-Initial-50-0-Daily-limit-5-0-Opinion-tra-1763316543713_1763316543713.txt  Pasted--2025-11-16-18-30-01-INFO-BANKROLL-MODE-TEST-Initial-50-0-Daily-limit-5-0-2025-11-16-1-1763322413357_1763322413358.txt  Pasted--2025-11-16-20-00-01-INFO-BANKROLL-MODE-TEST-Initial-50-0-Daily-limit-5-0-2025-11-16-2-1763324192347_1763324192348.txt  Pasted--2025-11-16-20-00-01-INFO-BANKROLL-MODE-TEST-Initial-50-0-Daily-limit-5-0-2025-11-16-2-1763324820497_1763324820497.txt  Pasted--2025-11-16-20-25-44-INFO-INFO-Processing-cycle-for-Grok-2025-11-16-20-25-44-INFO-INFO--1763324985185_1763324985185.txt  (+138 more)
(+100 files in other folders)
