[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "google-genai>=1.49.0",
    "nltk>=3.9.2",
    "numpy>=2.3.4",
    "openai>=2.7.1",
    "pandas>=2.3.3",
    "plotly>=6.4.0",
    "praw>=7.8.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sift-stack-py>=0.9.1",
    "streamlit>=1.51.0",
    "streamlit-autorefresh>=1.0.1",
    "tenacity>=9.1.2",
    "yfinance>=0.2.66",
]
